# durin-tcg

./: .gitignore  .gitmodules  LICENSE  README.md  bot.py  constants.py  enums.py  main.py  pyproject.toml  requirements.txt
aqua_tcg/: bot.py  constants.py  enums.py  exceptions.py
aqua_tcg/cogs/: admin.py  battling.py  cardgame.py  deckbuilding.py  greetings.py  info.py  warping.py
aqua_tcg/models/: __init__.py  cards.py  game.py  game_data.py  user.py
aqua_tcg/utils/: __init__.py  reading_cards.py  reading_users.py
aqua_tcg/views/: battle_view.py  card_album_view.py  pvp_view.py
aqua_tcg/views/decks/: deck_add_view.py  deck_delete_view.py  deck_edit_view.py
aqua_tcg/views/pve/: pve_game_view.py
cogs/: cardgame.py  greetings.py
durin_tcg/: bot.py  config.py  constants.py  enums.py  l10n.py
durin_tcg/cogs/: admin.py  battling.py  cardgame.py  deckbuilding.py  info.py  warping.py
durin_tcg/commands/: battling.py
durin_tcg/models/: cards.py  game.py  game_data.py  user.py
durin_tcg/utils/: logger.py  reading_cards.py  reading_users.py
durin_tcg/views/: base.py  battle_view.py  card_album_view.py  pvp_view.py
durin_tcg/views/battling/: battle_invite_view.py  battle_views.py  switch_deck_view.py
durin_tcg/views/decks/: deck_add_view.py  deck_delete_view.py  deck_edit_view.py
durin_tcg/views/pve/: pve_game_view.py
l10n/: en_US.yaml  ja.yaml
models/: cards.py  game.py
utils/: logger.py  reading_cards.py
